--- a/nginx.conf
+++ b/nginx.conf
@@ -9,7 +9,7 @@ server {
     }
 
     location /api {
-        proxy_pass http://backend:3001;
+        proxy_pass https://settlement-backend-production.up.railway.app/api;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -19,6 +19,7 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_cache_bypass $http_upgrade;
     }
+
 
     error_page 500 502 503 504 /50x.html;
     location = /50x.html {
