--- a/nginx.conf
+++ b/nginx.conf
@@ -8,7 +8,7 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
-    location /api {
+    location /api/ {
         proxy_pass https://settlement-backend-production.up.railway.app/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
