--- a/nginx.conf
+++ b/nginx.conf
@@ -9,7 +9,7 @@ server {
     }
 
     location /api/ {
-        proxy_pass https://settlement-backend-production.up.railway.app/;
+        proxy_pass https://settlement-backend-production.up.railway.app;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
