--- a/nginx.conf
+++ b/nginx.conf
@@ -11,7 +11,7 @@ server {
     location /api/ {
         proxy_pass https://settlement-backend-production.up.railway.app/;
         proxy_ssl_verify off;
-        proxy_ssl_protocols TLSv1 TLSv1.1 TLSv1.2 TLSv1.3;
+        proxy_ssl_protocols TLSv1.2 TLSv1.3;    
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
