--- a/nginx.conf
+++ b/nginx.conf
@@ -11,19 +11,18 @@ server {
     location /api/ {
         proxy_pass https://settlement-backend-production.up.railway.app/;
         proxy_ssl_verify off;
-        proxy_ssl_protocols TLSv1.2 TLSv1.3;    
+        proxy_ssl_protocols TLSv1 TLSv1.1 TLSv1.2 TLSv1.3;
+        proxy_ssl_server_name on;
         proxy_http_version 1.1;
+
+        proxy_set_header Host $host;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_cache_bypass $http_upgrade;
     }
-
-
-
 
     error_page 500 502 503 504 /50x.html;
     location = /50x.html {
