--- a/nginx.conf
+++ b/nginx.conf
@@ -9,7 +9,7 @@ server {
     }
 
     location /api/ {
-        proxy_pass https://settlement-backend-production.up.railway.app/;
+        proxy_pass https://settlement-backend-production.up.railway.app/api/;
         proxy_ssl_verify off;
         proxy_ssl_protocols TLSv1 TLSv1.1 TLSv1.2 TLSv1.3;
         proxy_ssl_server_name on;
